<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/main"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".MainActivity">

  <TextView
      android:id="@+id/text_view_hello_id"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/welcome_to_lottery_generator"
      android:textSize="25sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.047" />

  <ImageView
      android:id="@+id/imageView2"
      android:layout_width="337dp"
      android:layout_height="390dp"
      android:layout_marginTop="20dp"
      android:src="@drawable/lottery_main_page"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.486"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/text_view_hello_id" />


  <Button
      android:id="@+id/generate_lottery_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="68dp"
      android:text="@string/generate_button"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.496"
      app:layout_constraintStart_toStartOf="parent" />

  <LinearLayout
      android:layout_width="298dp"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintBottom_toTopOf="@+id/generate_lottery_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView2">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/name_input_text">

      <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/enter_your_name" />
    </com.google.android.material.textfield.TextInputLayout>
  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
